@@ -166,5 +166,6 @@ particular products (I apologize if I have missed anybody):
 	Georg Ostertag
 	Manuel Siggen
 	David Huber
+	Harald Welte
 
 And many others for their many helpful suggestions and bug reports -- thanks.
