@@ -20,6 +20,8 @@
   -->
 
   <Template brand="Brother" part="DK-1201" size="Other" width="25.91mm" height="83.90mm" description="Standard Address Labels 29mm x 90mm">
+    <Meta category="label"/>
+    <Meta category="mail"/>
     <Label-rectangle id="0" width="25.91mm" height="83.90mm" round="0" x_waste="0" y_waste="0">
       <Markup-rect x1="-1.5mm" y1="-3mm" w="29mm" h="90mm" r="1.5mm" />
       <Layout nx="1" ny="1" x0="0" y0="0" dx="0" dy="0"/>
@@ -27,6 +29,8 @@
   </Template>
 
   <Template brand="Brother" part="DK-1202" size="Other" width="58.93mm" height="93.20mm" description="Shipping Labels 62mm x 100mm">
+    <Meta category="label"/>
+    <Meta category="mail"/>
     <Label-rectangle id="0" width="58.93mm" height="93.20mm" round="0" x_waste="0" y_waste="0">
       <Markup-rect x1="-1.5mm" y1="-3mm" w="62mm" h="100mm" r="1.5mm" />
       <Layout nx="1" ny="1" x0="0" y0="0" dx="0" dy="0"/>
@@ -34,6 +38,7 @@
   </Template>
 
   <Template brand="Brother" part="DK-1204" size="Other" width="13.97mm" height="47.92mm" description="Multi Purpose Labels 17mm x 54mm">
+    <Meta category="label"/>
     <Label-rectangle id="0" width="13.97mm" height="47.92mm" round="0" x_waste="0" y_waste="0">
       <Markup-rect x1="-1.5mm" y1="-3mm" w="17mm" h="54mm" r="1.5mm" />
       <Layout nx="1" ny="1" x0="0" y0="0" dx="0" dy="0"/>
